Add `gigahost_server` and `gigahost_servers` data sources
